// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrimaryTitle Component > matches snapshot with custom styles 1`] = `
<DocumentFragment>
  <h1
    data-testid="antd-title"
    level="1"
    style="text-transform: uppercase; font-size: 3rem; font-weight: 700; letter-spacing: -0.1em; color: blue; margin: 0px 0px 1rem 0px; font-family: inherit; line-height: 1.2;"
  >
    Styled Snapshot
  </h1>
</DocumentFragment>
`;

exports[`PrimaryTitle Component > matches snapshot with default props 1`] = `
<DocumentFragment>
  <h1
    data-testid="antd-title"
    level="1"
    style="text-transform: uppercase; font-size: 2rem; font-weight: 700; letter-spacing: -0.1em; color: rgb(37, 37, 37); margin: 0px 0px 1rem 0px; font-family: inherit; line-height: 1.2;"
  >
    Snapshot Test
  </h1>
</DocumentFragment>
`;
